Wrote primary unit tests for WaitForActivityTask action.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="TestHelper.fs" />
     <Compile Include="TestStartAndWaitForActivityTask.fs" />
     <Compile Include="TestStartActivityTask.fs" />
+    <Compile Include="TestWaitForActivityTask.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
