Wrote primary unit tests for RequestCancelActivityTask action. Fixed bug with activityId in FindActivityTaskHistory

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="TestStartAndWaitForActivityTask.fs" />
     <Compile Include="TestStartActivityTask.fs" />
     <Compile Include="TestWaitForActivityTask.fs" />
+    <Compile Include="TestRequestCancelActivityTask.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
