Wrote primary unit tests for StartAndWaitForLambdaFunction action. Tweaked lambda history to detect schedule and start failures before other completion status types.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="TestStartActivityTask.fs" />
     <Compile Include="TestWaitForActivityTask.fs" />
     <Compile Include="TestRequestCancelActivityTask.fs" />
+    <Compile Include="TestStartAndWaitForLambdaFunction.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
