--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="TestStartAndWaitForLambdaFunction.fs" />
     <Compile Include="TestStartTimer.fs" />
     <Compile Include="TestCancelTimer.fs" />
+    <Compile Include="TestWaitForTimer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
