Wrote primary unit tests for StartChildWorkflowExecution action.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="TestCancelTimer.fs" />
     <Compile Include="TestWaitForTimer.fs" />
     <Compile Include="TestRecordMarker.fs" />
+    <Compile Include="TestStartChildWorkflowExecution.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
