Wrote primary unit tests for WaitForChildWorkflowExecution action. Added tasklist parameter to PollAndDecide. Fixed bug with WorkflowResultFail, swapped reason and decide.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -69,6 +69,7 @@
     <Compile Include="TestWaitForTimer.fs" />
     <Compile Include="TestRecordMarker.fs" />
     <Compile Include="TestStartChildWorkflowExecution.fs" />
+    <Compile Include="TestWaitForChildWorkflowExecution.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
