--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -70,6 +70,7 @@
     <Compile Include="TestRecordMarker.fs" />
     <Compile Include="TestStartChildWorkflowExecution.fs" />
     <Compile Include="TestWaitForChildWorkflowExecution.fs" />
+    <Compile Include="TestSignalExternalWorkflowExecution.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
