--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -71,6 +71,7 @@
     <Compile Include="TestStartChildWorkflowExecution.fs" />
     <Compile Include="TestWaitForChildWorkflowExecution.fs" />
     <Compile Include="TestSignalExternalWorkflowExecution.fs" />
+    <Compile Include="TestRequestCancelExternalWorkflowExecution.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
