Wrote primary unit tests for WorkflowExecutionSignaled action.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="TestWaitForChildWorkflowExecution.fs" />
     <Compile Include="TestSignalExternalWorkflowExecution.fs" />
     <Compile Include="TestRequestCancelExternalWorkflowExecution.fs" />
+    <Compile Include="TestWorkflowExecutionSignaled.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
