Wrote primary unit tests for WorkflowExecutionCancelRequested action. Changed start workflow helper to take a ChildPolicy.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -74,6 +74,7 @@
     <Compile Include="TestRequestCancelExternalWorkflowExecution.fs" />
     <Compile Include="TestWorkflowExecutionSignaled.fs" />
     <Compile Include="TestWaitForWorkflowExecutionSignaled.fs" />
+    <Compile Include="TestWorkflowExecutionCancelRequested.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
