--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="TestWorkflowExecutionSignaled.fs" />
     <Compile Include="TestWaitForWorkflowExecutionSignaled.fs" />
     <Compile Include="TestWorkflowExecutionCancelRequested.fs" />
+    <Compile Include="TestGetWorkflowExecutionInput.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
