Wrote primary unit tests for the Zero builder case.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="TestWorkflowExecutionCancelRequested.fs" />
     <Compile Include="TestGetWorkflowExecutionInput.fs" />
     <Compile Include="TestReturnResult.fs" />
+    <Compile Include="TestZero.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
