Wrote primary unit tests for the builder For Loop

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -78,6 +78,7 @@
     <Compile Include="TestGetWorkflowExecutionInput.fs" />
     <Compile Include="TestReturnResult.fs" />
     <Compile Include="TestZero.fs" />
+    <Compile Include="TestForLoop.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
