--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -79,6 +79,7 @@
     <Compile Include="TestReturnResult.fs" />
     <Compile Include="TestZero.fs" />
     <Compile Include="TestForLoop.fs" />
+    <Compile Include="TestWhileLoop.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
