--- a/FlowSharp/FlowSharp.fsproj
+++ b/FlowSharp/FlowSharp.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Actions.fs" />
     <Compile Include="WorkflowComputationExpr.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
