Wrote MarkerRecorded action. Wrote primary unit tests for MarkerRecorded.

--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="TestStartTimer.fs" />
     <Compile Include="TestCancelTimer.fs" />
     <Compile Include="TestWaitForTimer.fs" />
+    <Compile Include="TestMarkerRecorded.fs" />
     <Compile Include="TestRecordMarker.fs" />
     <Compile Include="TestStartChildWorkflowExecution.fs" />
     <Compile Include="TestWaitForChildWorkflowExecution.fs" />
