Support for ContextManager DefaultContextManager is stubbed out

--- a/FlowSharp/FlowSharp.fsproj
+++ b/FlowSharp/FlowSharp.fsproj
@@ -58,8 +58,8 @@
     <Compile Include="Actions.fs" />
     <Compile Include="FlowSharp.fs" />
     <Compile Include="HistoryWalker.fs" />
+    <Compile Include="ExecutionContext.fs" />
     <Compile Include="Builder.fs" />
-    <Compile Include="SimpleExecutionContext.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
