--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -88,6 +88,7 @@
     <Compile Include="TestWhileLoop.fs" />
     <Compile Include="TestTryWith.fs" />
     <Compile Include="TestTryFinally.fs" />
+    <Compile Include="TestExecutionContextManager.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
