--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -89,6 +89,7 @@
     <Compile Include="TestTryWith.fs" />
     <Compile Include="TestTryFinally.fs" />
     <Compile Include="TestExecutionContextManager.fs" />
+    <Compile Include="TestRemoveFromContext.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
