--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -65,6 +65,9 @@
     <Compile Include="TestWaitForAllActivityTask.fs" />
     <Compile Include="TestRequestCancelActivityTask.fs" />
     <Compile Include="TestScheduleLambdaFunction.fs" />
+    <Compile Include="TestWaitForLambdaFunction.fs" />
+    <Compile Include="TestWaitForAnyLambdaFunction.fs" />
+    <Compile Include="TestWaitForAllLambdaFunction.fs" />
     <Compile Include="TestStartTimer.fs" />
     <Compile Include="TestWaitForTimer.fs" />
     <Compile Include="TestCancelTimer.fs" />
