--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="ExamplesConfiguration.fs" />
     <Compile Include="CommandInterpreter.fs" />
+    <Compile Include="ActivityExamples.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
