--- a/FlowSharp/FlowSharp.fsproj
+++ b/FlowSharp/FlowSharp.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Registrar.fs" />
     <Compile Include="EventPatterns.fs" />
     <Compile Include="Actions.fs" />
     <Compile Include="FlowSharp.fs" />
