--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="ActivityExamples.fs" />
     <Compile Include="SignalExamples.fs" />
     <Compile Include="MarkerExamples.fs" />
+    <Compile Include="ChildWorkflowExamples.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
