--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="SignalExamples.fs" />
     <Compile Include="MarkerExamples.fs" />
     <Compile Include="ChildWorkflowExamples.fs" />
+    <Compile Include="TimerExamples.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
