Wrote context example.

--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="ChildWorkflowExamples.fs" />
     <Compile Include="TimerExamples.fs" />
     <Compile Include="InputAndReturnExamples.fs" />
+    <Compile Include="ContextExamples.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
