--- a/FlowSharp/FlowSharp.fsproj
+++ b/FlowSharp/FlowSharp.fsproj
@@ -63,7 +63,7 @@
     <Compile Include="ContextExpression.fs" />
     <Compile Include="ExecutionContextManager.fs" />
     <Compile Include="Trace.fs" />
-    <Compile Include="Builder.fs" />
+    <Compile Include="FlowSharp.fs" />
     <Compile Include="AsyncDeciderActor.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
