--- a/FlowSharp/FlowSharp.nuspec
+++ b/FlowSharp/FlowSharp.nuspec
@@ -1,18 +1,17 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <id>LP4-3.FlowSharp.FlowSharp</id>
+    <version>1.0.0</version>
+    <title>FlowSharp</title>
+    <authors>Glen Braun</authors>
+    <owners>LP4-3, LLC</owners>
+    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.txt</licenseUrl>
+    <projectUrl>https://github.com/glenbraun/FlowSharp</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2017</copyright>
-    <tags>Tag1 Tag2</tags>
+    <description>F# computation expression builder for AWS SimpleWorkflow.</description>
+    <releaseNotes>Initial release.</releaseNotes>
+    <copyright>Copyright 2017 LP4-3, LLC</copyright>
+    <tags>AWS SimpleWorkflow Workflow SWF</tags>
   </metadata>
 </package>
